--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,6 @@ updates:
       interval: weekly
 
   - package-ecosystem: docker
-    directory: /
+    directory: /src/main/docker/
     schedule:
       interval: weekly
