--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -17,8 +17,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "checkout"
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: "detekt"
         uses: natiginfo/action-detekt-all@1.22.0
