--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-kotlinVersion=1.7.21
-
 assertJVersion=3.23.1
+dataFakerVersion=1.7.0
+kotlinVersion=1.7.21
 quarkusPlatformVersion=2.15.1.Final
-testContainersPlatformVersion=1.17.6
