--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,18 @@ updates:
     directory: /
     schedule:
       interval: weekly
-  
+
   - package-ecosystem: gradle
     directory: /
+    schedule:
+      interval: weekly
+
+  - package-ecosystem: docker
+    directory: /
+    schedule:
+      interval: weekly
+
+  - package-ecosystem: docker
+    directory: /library/src/main/docker
     schedule:
       interval: weekly
