Add SuperLinter as GitHub action and as local run

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -2,9 +2,9 @@
 name: Analyze
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main, master ]
   workflow_dispatch:
 jobs:
   analyze:
@@ -29,3 +29,9 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: ${{ runner.temp }}/qodana/results/qodana.sarif.json
+      - name: Get Environment for SuperLinter
+        run: cat .github/super-linter.env >> "$GITHUB_ENV"
+      - name: Lint Code Base
+        uses: github/super-linter@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
