--- a/.editorconfig
+++ b/.editorconfig
@@ -334,7 +334,7 @@ ij_xml_space_inside_empty_tag = false
 ij_xml_text_wrap = normal
 ij_xml_use_custom_settings = false
 
-[{*.har,*.jsb2,*.jsb3,*.json,.babelrc,.eslintrc,.stylelintrc,bowerrc,jest.config}]
+[{*.har,*.jsb2,*.jsb3,*.json,.babelrc,.ecrc,.eslintrc,.stylelintrc,bowerrc,jest.config}]
 indent_size = 2
 ij_visual_guides = none
 ij_json_array_wrapping = split_into_lines
