--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -2,9 +2,9 @@
 name: Analyze
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main, master ]
   workflow_dispatch:
 jobs:
   analyze:
@@ -16,16 +16,25 @@ jobs:
       security-events: write
     strategy:
       fail-fast: true
+      matrix:
+        language: [ 'java' ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Get Environment for SuperLinter
+        run: cat .github/super-linter.env >> "$GITHUB_ENV"
+      - name: SuperLinter Scan
+        uses: github/super-linter@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          LOG_LEVEL: NOTICE
       - name: Qodana Scan
         uses: JetBrains/qodana-action@v2022.3.0
         with:
           args: --baseline,qodana.sarif.json
-      - name: Upload Sarif file
+      - name: Upload Sarif file from Qodana
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: ${{ runner.temp }}/qodana/results/qodana.sarif.json
