--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,11 @@ updates:
       interval: weekly
 
   - package-ecosystem: docker
+    directory: /grpc/src/main/docker
+    schedule:
+      interval: weekly
+
+  - package-ecosystem: docker
     directory: /library/src/main/docker
     schedule:
       interval: weekly
