poc-quarkus-25 Add rest submodule

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,8 @@ updates:
     directory: /library/src/main/docker
     schedule:
       interval: weekly
+
+  - package-ecosystem: docker
+    directory: /rest/src/main/docker
+    schedule:
+      interval: weekly
