poc-quarkus-25 Fix entity handling in library

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 assertJVersion=3.23.1
+commonLangVersion="3.12.0"
 dataFakerVersion=1.7.0
 kotlinVersion=1.7.21
 quarkusPlatformVersion=2.15.1.Final
