--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -30,3 +30,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LOG_LEVEL: NOTICE
+      - name: Qodana Scan
+        uses: JetBrains/qodana-action@v2023.1.0
+        with:
+          args: --baseline,qodana.sarif.json
+      - name: Upload Sarif file from Qodana
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ${{ runner.temp }}/qodana/results/qodana.sarif.json
