poc-quarkus-40 Updates dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-assertJVersion=3.23.1
-dataFakerVersion=1.7.0
-kotlinVersion=1.7.21
-quarkusPlatformVersion=2.15.1.Final
-sonarQubeVersion=3.5.0.2730
+assertJVersion=3.26.3
+dataFakerVersion=2.3.0
+kotlinVersion=1.9.24
+quarkusPlatformVersion=3.12.2
+sonarQubeVersion=5.1.0.4882
